<resources>
    <string name="app_name">Not&amp;tion</string>
    <string name="logo_app">logo_app</string>
    <string name="btnPerfil">btnPerfil\n</string>
    <string name="icono_folder">icono_folder</string>

    <!--> Descriptions <-->
    <string name="profile_root" type="id">profile_root</string>
    <string name="desc_return_button">Atras</string>
    <string name="desc_calendar_button">Calendario</string>
    <string name="desc_notes_button">Notas</string>
    <string name="desc_add_button">Añadir elemento</string>
    <string name="new_user"> o Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="or">o</string>
    <string name="user">Usuario</string>
    <string name="create_new_note">Crear nueva nota</string>
    <string name="note_created_check">Nota creada correctamente</string>
    <string name="create_new_folder">Crear nueva carpeta</string>
    <string name="event_deleted">Evento eliminado</string>

    <string name="new_note">Nueva nota</string>
    <string name="new_folder">Nueva carpeta</string>
    <string name="name">Nombre</string>
    <string name="email">Correo: %1$s</string>
    <string name="create_account">Crear cuenta</string>
    <string name="already_have_an_account">Ya tienes cuenta?</string>
    <string name="select_language">Seleccionar lenguaje</string>

    <!---->
    <string name="lng">Idioma</string>
    <string name="buscar">Buscar</string>
    <string name="route">Principal -> PAD</string>
    <string name="add_note">Añadir nota</string>
    <string name="profile_picture">foto_perfil</string>
    <string name="editar_foto_perfil">editar_foto_perfil</string>
    <string name="Note_content">Comienza a escribir...</string>
    <string name="note_title">Titulo</string>

    <string name="logout">Cerrar sesión</string>

    <string name="alarma">Alarma</string>
    <string name="titulo_evento">Titulo del evento</string>
    <string name="descripcion_evento">Es ahora mismo</string>
    <string name="tiempo_evento">15:00 • 28 Nov 2025</string>
    <string name="indicador_pospuesto">🔁 Alarma pospuesta</string>
    <string name="posponer_texto">POSPONER 5 MIN</string>
    <string name="descartar_alarma">DESCARTAR</string>
    <string name="nuevo_recordatorio">Nuevo Recordatorio</string>
    <string name="notificar">Notificar:</string>
    <string name="ej_tiemponot">Ej: 5</string>
    <string name="botor_notificacion">antes del evento</string>
    <string name="cancelar_boton">Cancelar</string>
    <string name="agregar_boton">Añadir</string>
    <string name="configurar_recordatorios">Configurar Recordatorios</string>
    <string name="activar_recordatorios_previos">Activar recordatorios previos</string>
    <string name="activar_alarma">⏰ Notificar en el momento del evento</string>
    <string name="rec_prev_config">Recordatorios previos configurados:</string>
    <string name="sin_rec_prev">Sin recordatorios previos</string>
    <string name="masrecordatorio_previo">+ Añadir recordatorio previo</string>
    <string name="sonido_rec">Sonido de recordatorios:</string>
    <string name="sonido_def">Sonido por defecto</string>
    <string name="silencioso">Silencioso</string>
    <string name="sonido_alarma">Sonido de alarma:</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="limite_pos">Límite de postponimientos:</string>
    <string name="imagen_portada">Imagen de portada</string>
    <string name="anadir_portada">+ Añadir portada</string>
    <string name="guardar_volver">Guardar y volver</string>
    <string name="anadir_contenido">Añadir contenido</string>
    <string name="anadir_evento">Añadir evento</string>
    <string name="descripcion">Descripción</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="seleccionar_hora">Seleccionar hora</string>
    <string name="configurar_notificaciones">Configurar notificaciones</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="sin_recordatorios">Sin recordatorios</string>
    <string name="eliminar_evento">Eliminar evento</string>
    <string name="volver">Volver</string>
    <string name="minutos_antes">5 minutos antes</string>
    <string name="eliminar_recordatorio">Eliminar recordatorio</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="uid">UID:</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="introduce_nombre">Introduce tu nombre</string>
    <string name="cambiar_contrasena">Cambiar contraseña (opcional)</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="repetir_contrasena">Repite la nueva contraseña</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="folder_deleted_success">Folder was deleted successfully</string>
    <string name="eliminar">Delete</string>
    <string name="rename">Cambiar nombre</string>
    <string name="delete_note_message">¿Seguro que quieres eliminar esta nota?</string>
    <string name="eliminar_nombre">Eliminar &quot;%1$s&quot;</string>
    <string name="aceptar">Aceptar</string>
    <string name="invalid_name">El nombre no puede estar vacio</string>
    <string name="empty_data">Datos incompletos</string>
    <string name="full_window">"Por favor, activa 'Mostrar a pantalla completa' para las alarmas"</string>
    <string name="reminder">Recordatorio</string>
    <string name="no_reminder">Sin recordatorio</string>
    <string name="event_created_success">Evento creado correctamente</string>
    <string name="allow_notification">Notificaciones permitidas</string>
    <string name="setNumber">Introduce una cantidad</string>
    <string name="no_allow_notification">Permiso denegado. Las notificaciones no se mostrarán.</string>
    <string name="no_date">Fecha no recibida</string>setNumber


    <string name="title_mandatory">El titulo es obligatorio</string>

    <string name="introduce_cantidad">Introduce una cantidad</string>
    <string name="cantidad_mayor_cero">La cantidad debe ser mayor que 0</string>
    <string name="cantidad_invalida">Cantidad inválida</string>
    <string name="cantidad_demasiado_grande_unidad">Cantidad demasiado grande, usa una unidad mayor</string>
    <string name="cantidad_demasiado_grande_dias">Cantidad demasiado grande, usa días o semanas</string>
    <string name="maximo_dias">Máximo 365 días</string>
    <string name="maximo_semanas">Máximo 52 semanas</string>

    <string name="alarma_pospuesta">Alarma pospuesta</string>
    <string name="pospuesto_veces">Pospuesto %1$d vez</string>
    <string name="pospuesto_veces_plural">Pospuesto %1$d veces</string>
    <string name="limite_alcanzado">Límite alcanzado</string>
    <string name="limite_postponimientos_alcanzado">Has alcanzado el límite de postponimientos</string>
    <string name="alarma_pospuesta_minutos">Alarma pospuesta 5 minutos</string>

    <string name="sin_limite">Sin límite</string>
    <string name="maximo_una_vez">Máximo 1 vez</string>
    <string name="maximo_dos_veces">Máximo 2 veces</string>
    <string name="maximo_tres_veces">Máximo 3 veces</string>
    <string name="maximo_cinco_veces">Máximo 5 veces</string>

    <string name="limite_postponimientos_evento">Has alcanzado el límite de postponimientos para este evento</string>
    <string name="alarma_pospuesta_con_emoji">⏰ Alarma pospuesta %1$d minutos</string>


</resources>