<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_recordatorio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificar"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ej_tiemponot"
            android:inputType="number"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@android:drawable/edit_text"
            />

        <Spinner
            android:id="@+id/spinnerTimeUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="8dp"
            android:padding="12dp"/>

    </LinearLayout>
    <!-- Botón para añadir recordatorio -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botor_notificacion"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancelAddNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar_boton"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnAddNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_boton"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>