<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <!-- Barra de búsqueda -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/busquedaLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/transparent"
        app:boxBackgroundColor="@color/light_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/busquedaBarra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Texto de ruta debajo de la barra de búsqueda -->
    <TextView
        android:id="@+id/routeTextShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/route"
        android:padding="8dp"
        android:textColor="@color/text_button"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/busquedaLayout"
        app:layout_constraintStart_toStartOf="@id/busquedaLayout"
        app:layout_constraintEnd_toEndOf="@id/busquedaLayout"
        android:layout_marginTop="4dp"/>

    <!-- BOTÓN VOLVER ATRÁS -->
    <ImageButton
        android:id="@+id/btnGoBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_return"
        android:background="@drawable/bg_rounder"
        android:contentDescription="@string/desc_return_button"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"/>

    <!-- BOTÓN AÑADIR NOTA -->
    <ImageButton
        android:id="@+id/btnAddNote"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_note"
        android:background="@drawable/bg_rounder"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/routeTextShow"
        app:layout_constraintStart_toStartOf="@id/routeTextShow"
        app:layout_constraintEnd_toEndOf="@id/routeTextShow"
        app:layout_constraintBottom_toTopOf="@id/btnAddNote">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- RecyclerView para carpetas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFolders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/emptyMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Actualmente no hay contenido"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:gravity="center"/>

            <!-- RecyclerView para notas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
